Fixed wrong height on browser image buttons

--- a/http-pub/css/webapp.css
+++ b/http-pub/css/webapp.css
@@ -316,7 +316,7 @@ a img {
     cursor: pointer;
     border-width: 0px;
     width: 90px;
-    height: 90px;
+    height: 82px;
     background-color: transparent;
     background-position: center center;
     background-repeat: no-repeat;
